--- a/Türkçe/lineserisi.html
+++ b/Türkçe/lineserisi.html
@@ -33,6 +33,12 @@
     </title>
   </head>
   <body>
+    <!-- ========== Loader ========== -->
+    <div id="loading">
+      <img src="../img/loader.gif" />
+      <p>Yükleniyor...</p>
+    </div>
+
     <!-- ========== NAV Starts ========== -->
     <nav class="nav" style="position: relative">
       <div class="container">
@@ -516,12 +522,19 @@
       </div>
     </div>
 
+    <!-- ========== go up button ========== -->
+    <a class="up">
+      <i class="fa fa-arrow-up"></i>
+    </a>
+
     <!-- ========== Preview Ends ========== -->
 
     <!-- ========== steeldoor Ends ========== -->
 
     <!-- ========== Products Ends ========== -->
 
+    <script src="/js/loader.js"></script>
+    <script src="/js/goup.js"></script>
     <script src="/js/hamburger-menu.js"></script>
     <script src="/js/index.js"></script>
     <script src="/js/product.js"></script>
