--- a/Türkçe/teknikbilgiler.html
+++ b/Türkçe/teknikbilgiler.html
@@ -31,6 +31,12 @@
     <title>Nüans Çelik Kapı | Teknik Bilgiler | Bilgi Alın</title>
   </head>
   <body>
+    <!-- ========== Loader ========== -->
+    <div id="loading">
+      <img src="../img/loader.gif" />
+      <p>Yükleniyor...</p>
+    </div>
+
     <!-- ========== NAV Starts ========== -->
     <nav class="nav" style="position: relative">
       <div class="container">
@@ -370,7 +376,15 @@
         </ul>
       </div>
     </div>
+
+    <!-- ========== go up button ========== -->
+    <a class="up">
+      <i class="fa fa-arrow-up"></i>
+    </a>
     <!-- ========== Solid System Section Ends ========== -->
+
+    <script src="/js/loader.js"></script>
+    <script src="/js/goup.js"></script>
     <script src="/js/hamburger-menu.js"></script>
     <script src="/js/bgchange.js"></script>
   </body>
