--- a/Türkçe/iletisim.html
+++ b/Türkçe/iletisim.html
@@ -33,6 +33,12 @@
     </title>
   </head>
   <body>
+    <!-- ========== Loader ========== -->
+    <div id="loading">
+      <img src="../img/loader.gif" />
+      <p>Yükleniyor...</p>
+    </div>
+
     <!-- ========== NAV Starts ========== -->
     <nav class="nav" style="position: relative">
       <div class="container">
@@ -160,7 +166,7 @@
             ><i class="fab fa-instagram" aria-hidden="true"></i
           ></a>
 
-          <a href="https://wa.me/905321655059" class="w" target="_blank"
+          <a href="https://wa.me/902163525060" class="w" target="_blank"
             ><i class="fab fa-whatsapp" aria-hidden="true"></i
           ></a>
 
@@ -234,11 +240,23 @@
       <p class="copyright">
         TM &copy; 2023 - Nüans Çelik Kapı - Tüm Hakları Saklı Tutar
       </p>
-      <p class="cankot">web sitesi : Can Kotaman +90 530 355 2462</p>
+      <a
+        class="cankot"
+        href="https://wa.me/905303552462?text=Merhaba!%20Bir%20web%20sitesi%20yaptırmak%20istiyorum."
+        target="_blank"
+        ><p>web sitesi : Can Kotaman +90 530 355 2462</p></a
+      >
     </footer>
+
+    <!-- ========== go up button ========== -->
+    <a class="up">
+      <i class="fa fa-arrow-up"></i>
+    </a>
 
     <!-- ========== Footer Ends ========== -->
 
+    <script src="/js/loader.js"></script>
+    <script src="/js/goup.js"></script>
     <script src="/js/hamburger-menu.js"></script>
   </body>
 </html>
