--- a/Türkçe/yanginkapisi.html
+++ b/Türkçe/yanginkapisi.html
@@ -31,6 +31,12 @@
     <title>Nüans Çelik Kapı | Ürünlerimiz | Yangın Kapılarımız</title>
   </head>
   <body>
+    <!-- ========== Loader ========== -->
+    <div id="loading">
+      <img src="../img/loader.gif" />
+      <p>Yükleniyor...</p>
+    </div>
+
     <!-- ========== NAV Starts ========== -->
     <nav class="nav" style="position: relative">
       <div class="container">
@@ -93,7 +99,9 @@
               </li>
 
               <li class="breadcrumb-item">
-                <a class="active" href="/Türkçe/yanginkapisi.html">Yangın Kapılarımız</a>
+                <a class="active" href="/Türkçe/yanginkapisi.html"
+                  >Yangın Kapılarımız</a
+                >
               </li>
             </ul>
           </div>
@@ -182,12 +190,19 @@
       </div>
     </div>
 
+    <!-- ========== go up button ========== -->
+    <a class="up">
+      <i class="fa fa-arrow-up"></i>
+    </a>
+
     <!-- ========== Preview Ends ========== -->
 
     <!-- ========== steeldoor Ends ========== -->
 
     <!-- ========== Products Ends ========== -->
 
+    <script src="/js/loader.js"></script>
+    <script src="/js/goup.js"></script>
     <script src="/js/hamburger-menu.js"></script>
     <script src="/js/index.js"></script>
     <script src="/js/product.js"></script>
