--- a/Türkçe/ürünlerimiz.html
+++ b/Türkçe/ürünlerimiz.html
@@ -31,6 +31,13 @@
     <title>Nüans Çelik Kapı | Ürünlerimiz</title>
   </head>
   <body>
+    <!-- ========== Loader ========== -->
+    <!-- ========== Loader ========== -->
+    <div id="loading">
+      <img src="../img/loader.gif" />
+      <p>Yükleniyor...</p>
+    </div>
+
     <!-- ========== NAV Starts ========== -->
     <nav class="nav" style="position: relative">
       <div class="container">
@@ -99,21 +106,27 @@
     <!-- ========== Card Section Starts ========== -->
     <section class="info-cards">
       <div class="row">
-        <div class="product-card-col">
+        <a class="info-card-col" href="/Türkçe/diskapi.html">
           <img
             src="/img/aparman-dis-kapilarimi.png"
             alt=""
-            class="product-image"
+            class="product-card-image"
           />
           <h3>Apartman Dış Kapı Modellerimiz</h3>
-          <a href="/Türkçe/diskapi.html" class="card-btn">Git...</a>
-        </div>
+          <button class="btn">Git</button>
+        </a>
 
-        <div class="product-card-col">
-          <img src="/img/yangin-kapisi.png" alt="" class="product-image" />
+        <a class="info-card-col" href="/Türkçe/akillikilitürünler.html">
+          <img src="/img/akıllıkilit.jpg" alt="" class="product-card-image1" />
+          <h3>Akıllı Kilitlerimiz</h3>
+          <button class="btn">Git</button>
+        </a>
+
+        <a class="info-card-col" href="/Türkçe/yanginkapisi.html">
+          <img src="/img/yangin-kapisi.png" alt="" class="product-card-image" />
           <h3>Yangın Kapı Modellerimiz</h3>
-          <a href="/Türkçe/yanginkapisi.html" class="card-btn">Git...</a>
-        </div>
+          <button class="btn">Git</button>
+        </a>
       </div>
     </section>
     <!-- ========== Card Section Ends ========== -->
@@ -124,27 +137,34 @@
     <!-- ========== Card Section Starts ========== -->
     <section class="info-cards">
       <div class="row">
-        <div class="info-card-col">
+        <a class="info-card-col" href="/Türkçe/lineserisi.html">
           <img src="/img/lineserisi.png" alt="" class="product-card-image" />
           <h3>Line Serisi Çelik Kapı modellerimiz</h3>
-          <a href="/Türkçe/lineserisi.html" class="card-btn">Git...</a>
-        </div>
+          <button class="btn">Git</button>
+        </a>
 
-        <div class="info-card-col">
+        <a class="info-card-col" href="/Türkçe/bossserisi.html">
           <img src="/img/bossserisi.png" alt="" class="product-card-image" />
           <h3>Boss Serisi Çelik Kapı modellerimiz</h3>
-          <a href="/Türkçe/bossserisi.html" class="card-btn">Git...</a>
-        </div>
+          <button class="btn">Git</button>
+        </a>
 
-        <div class="info-card-col">
+        <a class="info-card-col" href="/Türkçe/modernserisi.html">
           <img src="/img/modernserisi.png" alt="" class="product-card-image" />
           <h3>Modern Serisi Çelik Kapı modellerimiz</h3>
-          <a href="/Türkçe/modernserisi.html" class="card-btn">Git...</a>
-        </div>
+          <button class="btn">Git</button>
+        </a>
       </div>
     </section>
+
+    <!-- ========== go up button ========== -->
+    <a class="up">
+      <i class="fa fa-arrow-up"></i>
+    </a>
     <!-- ========== Card Section Ends ========== -->
 
+    <script src="/js/loader.js"></script>
+    <script src="/js/goup.js"></script>
     <script src="/js/hamburger-menu.js"></script>
     <script src="/js/index.js"></script>
   </body>
